--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@
 @import "./utilidades.css";
 @import "./header.css";
 @import "./banner.css";
-@import "./vitrine.css";
+@import "./vitrine-noticias.css";
 @import "./texto.css";
