--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
-@import "./global.css";
-@import "./utilidades.css";
-@import "./header.css";
-@import "./banner.css";
-@import "./vitrine-noticias.css";
-@import "./texto.css";
+@import './global.css';
+@import './utilidades.css';
+@import './header.css';
+@import './banner.css';
+@import './vitrine-noticias.css';
+@import './texto.css';
+@import './mais-acessados.css';
