--- a/css/localizacao.css
+++ b/css/localizacao.css
@@ -1,5 +1,7 @@
 .localizacao{
   margin-bottom: 100px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .mapa{
@@ -19,6 +21,7 @@
 @media(max-width: 768px){
   .localizacao{
     margin-bottom: 50px;
+
   }
 
   .mapa{
