--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,12 @@
 header {
+  margin-top: 20px;
+}
+
+.header{
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 15px;
-  margin-top: 20px;
   border: 2px solid var(--verde-5);
   border-radius: 50px;
 }
