implementação API Mais Acessados

--- a/css/utilidades.css
+++ b/css/utilidades.css
@@ -1,14 +1,14 @@
-:root{
-  --verde-0: #BDE257;
-  --verde-1: #99C12A;
-  --verde-2: #78A109;
-  --verde-3: #5B7C00;
-  --verde-4: #3D5A00;
-  --verde-5: #3EB13A;
+:root {
+  --verde-0: #bde257;
+  --verde-1: #99c12a;
+  --verde-2: #78a109;
+  --verde-3: #5b7c00;
+  --verde-4: #3d5a00;
+  --verde-5: #3eb13a;
 
-  --cinza-0: #FFFFFF;
-  --cinza-1: #C0C0C0;
-  --cinza-2: #8B8B8B;
+  --cinza-0: #ffffff;
+  --cinza-1: #c0c0c0;
+  --cinza-2: #8b8b8b;
   --cinza-3: #505050;
   --cinza-4: #000000;
 
