--- a/css/texto.css
+++ b/css/texto.css
@@ -1,11 +1,11 @@
-.texto-bg{
+.texto-bg {
   border-top: 2px solid var(--verde-5);
   border-bottom: 2px solid var(--verde-5);
   margin-bottom: 100px;
   padding: 50px 0;
 }
 
-.texto{
+.texto {
   display: grid;
   grid-template-columns: auto 1fr;
   justify-content: center;
@@ -14,7 +14,7 @@
   padding: 0 100px;
 }
 
-.texto a{
+.texto a {
   display: inline-block;
   padding: 7px 14px;
   font-size: 1.5rem;
@@ -23,20 +23,20 @@
   color: var(--cinza-0);
 }
 
-.texto a:hover{
+.texto a:hover {
   background: var(--button-hover);
 }
 
-.texto p{
+.texto p {
   font-size: 1.25rem;
 }
 
-@media(max-width:1180px){
-  .texto-bg{
+@media (max-width: 1180px) {
+  .texto-bg {
     padding: 25px 0;
   }
 
-  .texto{
+  .texto {
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -44,28 +44,30 @@
     padding: 0 20px;
   }
 
-  .texto a{
+  .texto a {
     order: 2;
   }
 }
 
-@media(max-width: 768px){
-  .texto-bg{
+@media (max-width: 768px) {
+  .texto-bg {
     margin-bottom: 50px;
   }
 
-  .texto p, .texto a{
+  .texto p,
+  .texto a {
     font-size: 1rem;
   }
 }
 
-@media(max-width: 375px){
-  .texto{
+@media (max-width: 375px) {
+  .texto {
     padding: 0 20px;
     gap: 10px;
   }
 
-  .texto p, .texto a{
+  .texto p,
+  .texto a {
     font-size: 0.75rem;
   }
 }
